--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,6 +17,19 @@
         I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.
     </p>
 
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Canned tomatoes</li>
+        <li>Fresh herbs</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Noodles</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
+
 
     
 </body>
