--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Milkshake</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/milkshake.html">Milkshake</a>
+    <h1>Milkshake</h1>
+    <img src="/img/milkshake.webp" alt="milkshake">
     
 </body>
 </html>
