--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -8,6 +8,12 @@
 <body>
     <h1>Milkshake</h1>
     <img src="/img/milkshake.webp" alt="milkshake">
+
+    <h3>Description</h3>
+    <p>
+        A cool, refreshing mint milkshake that will have you craving for more. All you need is milk,
+        vanilla ice cream, chocolate syrup, and a few drops of peppermint extract.
+    </p>
     
 </body>
 </html>
