Add ingredients section to milkshake.html

--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -14,6 +14,14 @@
         A cool, refreshing mint milkshake that will have you craving for more. All you need is milk,
         vanilla ice cream, chocolate syrup, and a few drops of peppermint extract.
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 scoops vanilla ice cream</li>
+        <li>1/4 cup milk</li>
+        <li>1/4 cup chocolate syrup</li>
+        <li>1 drop peppermint extract</li>
+    </ul>
     
 </body>
 </html>
