Add Steps section to milkshake.html

--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -22,6 +22,19 @@
         <li>1/4 cup chocolate syrup</li>
         <li>1 drop peppermint extract</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>
+            <strong>Creating the Drink:</strong>
+            Combine ice cream, milk, chocolate syrup, and peppermint extract in a blender; blend until
+            smooth.
+        </li>
+        <li>
+            <strong>Serving the Drink:</strong>
+            Pour into 2 glasses and serve.
+        </li>
+    </ol>
     
 </body>
 </html>
