Add reference to brownies.html in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <br>
     <a href="recipes/milkshake.html">Milkshake</a>
     <br>
-    
+    <a href="recipes/brownies.html">Brownies</a>
+
     
 </body>
 </html>
