--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -8,6 +8,12 @@
 <body>
     <h1>Brownies</h1>
     <img src="/img/brownies.webp" alt="brownies">
+
+    <h3>Description</h3>
+    <p>
+        This brownie recipe makes rich, fudgy brownies that always turn out well. They're topped with
+        homemade chocolate frosting to make the best brownies ever!
+    </p>
     
 </body>
 </html>
