Add Ingredients section to brownies.html

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -14,6 +14,20 @@
         This brownie recipe makes rich, fudgy brownies that always turn out well. They're topped with
         homemade chocolate frosting to make the best brownies ever!
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Butter</li>
+        <li>White sugar</li>
+        <li>Eggs</li>
+        <li>Vanilla extract</li>
+        <li>Cocoa powder</li>
+        <li>All-purpose flour</li>
+        <li>Salt</li>
+        <li>Baking powder</li>
+        <li>Honey</li>
+        <li>Confectioners' sugar</li>
+    </ul>
     
 </body>
 </html>
