--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -28,6 +28,26 @@
         <li>Honey</li>
         <li>Confectioners' sugar</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>
+            <strong>Prepping Oven and Pan:</strong>
+            Preheat the oven to 175 degrees C. Grease and flour an 8-inch square pan
+        </li>
+        <li>
+            <strong>Prepping ingredients:</strong>
+            Melt 1/2 cup butter in a large saucepan. Remove from heat, and stir in sugar, eggs, and 1
+            teaspoon vanilla. Beat in 1/3 cup cocoa, flour, salt, and baking powder. Spread batter into
+            prepared pan.
+        </li>
+        <li>
+            <strong>Baking:</strong>
+        </li>
+        <li>
+            <strong>Frosting:</strong>
+        </li>
+    </ol>
     
 </body>
 </html>
