Add steps section to brownies.html

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -43,9 +43,14 @@
         </li>
         <li>
             <strong>Baking:</strong>
+            Bake in the preheated oven until top is dry and edges have started to pull away from the
+            sides of the pan, about 25 to 30 minutes. Let cool briefly before frosting.
         </li>
         <li>
             <strong>Frosting:</strong>
+            To make the frosting: Combine softened butter, Confectioners' sugar, 3 tablespoons cocoa,
+            hone, and 1 teaspoon vanilla extract in a bowl. Stir until smooth. Frost brownies while
+            they are still warm.
         </li>
     </ol>
     
