--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Brownies</h1>
-    <img src="/img/brownies.webp" alt="brownies">
+    <img src="/img/brownies.jpg" alt="brownies">
 
     <h3>Description</h3>
     <p>
