--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Milkshake</h1>
-    <img src="/img/milkshake.jpg" alt="milkshake">
+    <img src="../img/milkshake.jpg" alt="milkshake">
 
     <h3>Description</h3>
     <p>
