--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <br>
-    <a href="recipes/milkshake.html">Milkshake</a>
-    <br>
-    <a href="recipes/brownies.html">Brownies</a>
-
-    
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/milkshake.html">Milkshake</a></li>
+        <li><a href="recipes/brownies.html">Brownies</a></li>
+    </ul>
 </body>
 </html>
