Add line-break after strong element in Steps section

--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -27,12 +27,12 @@
     <h3>Steps</h3>
     <ol>
         <li>
-            <strong>Creating the Drink:</strong>
+            <strong>Creating the Drink:</strong><br>
             Combine ice cream, milk, chocolate syrup, and peppermint extract in a blender; blend until
             smooth.
         </li>
         <li>
-            <strong>Serving the Drink:</strong>
+            <strong>Serving the Drink:</strong><br>
             Pour into 2 glasses and serve.
         </li>
     </ol>
