--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -33,22 +33,22 @@
     <h3>Steps</h3>
     <ol>
         <li>
-            <strong>Prepping Oven and Pan:</strong>
+            <strong>Prepping Oven and Pan:</strong><br>
             Preheat the oven to 175 degrees C. Grease and flour an 8-inch square pan
         </li>
         <li>
-            <strong>Prepping ingredients:</strong>
+            <strong>Prepping ingredients:</strong><br>
             Melt 1/2 cup butter in a large saucepan. Remove from heat, and stir in sugar, eggs, and 1
             teaspoon vanilla. Beat in 1/3 cup cocoa, flour, salt, and baking powder. Spread batter into
             prepared pan.
         </li>
         <li>
-            <strong>Baking:</strong>
+            <strong>Baking:</strong><br>
             Bake in the preheated oven until top is dry and edges have started to pull away from the
             sides of the pan, about 25 to 30 minutes. Let cool briefly before frosting.
         </li>
         <li>
-            <strong>Frosting:</strong>
+            <strong>Frosting:</strong><br>
             To make the frosting: Combine softened butter, Confectioners' sugar, 3 tablespoons cocoa,
             hone, and 1 teaspoon vanilla extract in a bowl. Stir until smooth. Frost brownies while
             they are still warm.
