--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -34,31 +34,31 @@
     <h3>Steps</h3>
     <ol>
         <li>
-            <Strong>Cook the meat:</Strong><br>
+            <h4>Cook the meat:</h4>
             Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue
             cooking until it's translucent. Stir in the canned tomato products, half of the parsley, 
             garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.
         </li>
         <li>
-            <strong>Cook the noodles:</strong><br>
+            <h4>Cook the noodles:</h4>
             Boil the lasagna noodles in lightly salted water until they're al dente.
         </li>
         <li>
-            <strong>Make the cheese layer:</strong><br>
+            <h4>Make the cheese layer:</h4>
             Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and
             pepper in a bowl.
         </li>
         <li>
-            <strong>Assemble the lasagna:</strong><br>
+            <h4>Assemble the lasagna:</h4>
             Layer the ingredients according to the recipe (starting with sauce and ending with
             mozzarella) until the lasagna is assembled.
         </li>
         <li>
-            <strong>Bake the lasagna:</strong><br>
+            <h4>Bake the lasagna:</h4>
             Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and
             continue baking until the top is golden brown.
         </li>
     </ol>
-    
+    <div class="space"></div>
 </body>
 </html>
