--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -27,15 +27,15 @@
     <h3>Steps</h3>
     <ol>
         <li>
-            <strong>Creating the Drink:</strong><br>
+            <h4>Creating the Drink:</h4>
             Combine ice cream, milk, chocolate syrup, and peppermint extract in a blender; blend until
             smooth.
         </li>
         <li>
-            <strong>Serving the Drink:</strong><br>
+            <h4>Serving the Drink:</h4>
             Pour into 2 glasses and serve.
         </li>
     </ol>
-    
+    <div class="space"></div>
 </body>
 </html>
