Add .title class to h1 and change it in css

--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Milkshake</h1>
+    <h1 class="title">Milkshake</h1>
     <img src="../img/milkshake.jpg" alt="milkshake">
 
     <h3>Description</h3>
