--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Brownies</h1>
+    <h1 class="title">Brownies</h1>
     <img src="../img/brownies.jpg" alt="brownies">
 
     <h3>Description</h3>
