--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="title">Lasagna</h1>
     <img src="../img/lasagna.jpg" alt="lasagna">
 
     <h3>Description</h3>
