Add div to each section to add background styling

--- a/recipes/milkshake.html
+++ b/recipes/milkshake.html
@@ -10,32 +10,40 @@
     <h1 class="title">Milkshake</h1>
     <img src="../img/milkshake.jpg" alt="milkshake">
 
-    <h3>Description</h3>
-    <p>
-        A cool, refreshing mint milkshake that will have you craving for more. All you need is milk,
-        vanilla ice cream, chocolate syrup, and a few drops of peppermint extract.
-    </p>
+    <div class="container">
+        <h3>Description</h3>
+        <p>
+            A cool, refreshing mint milkshake that will have you craving for more. All you need is milk,
+            vanilla ice cream, chocolate syrup, and a few drops of peppermint extract.
+        </p>
+    </div>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>4 scoops vanilla ice cream</li>
-        <li>1/4 cup milk</li>
-        <li>1/4 cup chocolate syrup</li>
-        <li>1 drop peppermint extract</li>
-    </ul>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>
-            <h4>Creating the Drink:</h4>
-            Combine ice cream, milk, chocolate syrup, and peppermint extract in a blender; blend until
-            smooth.
-        </li>
-        <li>
-            <h4>Serving the Drink:</h4>
-            Pour into 2 glasses and serve.
-        </li>
-    </ol>
+    <div class="container">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 scoops vanilla ice cream</li>
+            <li>1/4 cup milk</li>
+            <li>1/4 cup chocolate syrup</li>
+            <li>1 drop peppermint extract</li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                <h4>Creating the Drink:</h4>
+                Combine ice cream, milk, chocolate syrup, and peppermint extract in a blender; blend until
+                smooth.
+            </li>
+            <li>
+                <h4>Serving the Drink:</h4>
+                Pour into 2 glasses and serve.
+            </li>
+        </ol>
+    </div>
+
     <div class="space"></div>
 </body>
 </html>
