--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1 class="title">Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/milkshake.html">Milkshake</a></li>
-        <li><a href="recipes/brownies.html">Brownies</a></li>
-    </ul>
+    <div class="container">
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/milkshake.html">Milkshake</a></li>
+            <li><a href="recipes/brownies.html">Brownies</a></li>
+        </ul>
+    </div>
 </body>
 </html>
