--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -10,50 +10,57 @@
     <h1 class="title">Brownies</h1>
     <img src="../img/brownies.jpg" alt="brownies">
 
-    <h3>Description</h3>
-    <p>
-        This brownie recipe makes rich, fudgy brownies that always turn out well. They're topped with
-        homemade chocolate frosting to make the best brownies ever!
-    </p>
+    <div class="container">
+        <h3>Description</h3>
+        <p>
+            This brownie recipe makes rich, fudgy brownies that always turn out well. They're topped with
+            homemade chocolate frosting to make the best brownies ever!
+        </p>
+    </div>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Butter</li>
-        <li>White sugar</li>
-        <li>Eggs</li>
-        <li>Vanilla extract</li>
-        <li>Cocoa powder</li>
-        <li>All-purpose flour</li>
-        <li>Salt</li>
-        <li>Baking powder</li>
-        <li>Honey</li>
-        <li>Confectioners' sugar</li>
-    </ul>
+    <div class="container">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Butter</li>
+            <li>White sugar</li>
+            <li>Eggs</li>
+            <li>Vanilla extract</li>
+            <li>Cocoa powder</li>
+            <li>All-purpose flour</li>
+            <li>Salt</li>
+            <li>Baking powder</li>
+            <li>Honey</li>
+            <li>Confectioners' sugar</li>
+        </ul>
+    </div>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>
-            <h4>Prepping Oven and Pan:</h4>
-            Preheat the oven to 175 degrees C. Grease and flour an 8-inch square pan
-        </li>
-        <li>
-            <h4>Prepping ingredients:</h4>
-            Melt 1/2 cup butter in a large saucepan. Remove from heat, and stir in sugar, eggs, and 1
-            teaspoon vanilla. Beat in 1/3 cup cocoa, flour, salt, and baking powder. Spread batter into
-            prepared pan.
-        </li>
-        <li>
-            <h4>Baking:</h4>
-            Bake in the preheated oven until top is dry and edges have started to pull away from the
-            sides of the pan, about 25 to 30 minutes. Let cool briefly before frosting.
-        </li>
-        <li>
-            <h4>Frosting:</h4>
-            To make the frosting: Combine softened butter, Confectioners' sugar, 3 tablespoons cocoa,
-            hone, and 1 teaspoon vanilla extract in a bowl. Stir until smooth. Frost brownies while
-            they are still warm.
-        </li>
-    </ol>
+    <div class="container">
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                <h4>Prepping Oven and Pan:</h4>
+                Preheat the oven to 175 degrees C. Grease and flour an 8-inch square pan
+            </li>
+            <li>
+                <h4>Prepping ingredients:</h4>
+                Melt 1/2 cup butter in a large saucepan. Remove from heat, and stir in sugar, eggs, and 1
+                teaspoon vanilla. Beat in 1/3 cup cocoa, flour, salt, and baking powder. Spread batter into
+                prepared pan.
+            </li>
+            <li>
+                <h4>Baking:</h4>
+                Bake in the preheated oven until top is dry and edges have started to pull away from the
+                sides of the pan, about 25 to 30 minutes. Let cool briefly before frosting.
+            </li>
+            <li>
+                <h4>Frosting:</h4>
+                To make the frosting: Combine softened butter, Confectioners' sugar, 3 tablespoons cocoa,
+                hone, and 1 teaspoon vanilla extract in a bowl. Stir until smooth. Frost brownies while
+                they are still warm.
+            </li>
+        </ol>
+    </div>
+
     <div class="space"></div>
 </body>
 </html>
