--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,55 +10,63 @@
     <h1 class="title">Lasagna</h1>
     <img src="../img/lasagna.jpg" alt="lasagna">
 
-    <h3>Description</h3>
-    <p>
-        This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce
-        and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made
-        with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan.
-        I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.
-    </p>
+    <div class="container">
+        <h3>Description</h3>
+        <p>
+            This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce
+            and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made
+            with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan.
+            I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.
+        </p>
+    </div>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Meat</li>
-        <li>Onion</li>
-        <li>Canned tomatoes</li>
-        <li>Fresh herbs</li>
-        <li>Sugar</li>
-        <li>Spices and seasonings</li>
-        <li>Noodles</li>
-        <li>Cheese</li>
-        <li>Eggs</li>
-    </ul>
+    <div class="container">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion</li>
+            <li>Canned tomatoes</li>
+            <li>Fresh herbs</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Noodles</li>
+            <li>Cheese</li>
+            <li>Eggs</li>
+        </ul>
+    </div>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>
-            <h4>Cook the meat:</h4>
-            Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue
-            cooking until it's translucent. Stir in the canned tomato products, half of the parsley, 
-            garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.
-        </li>
-        <li>
-            <h4>Cook the noodles:</h4>
-            Boil the lasagna noodles in lightly salted water until they're al dente.
-        </li>
-        <li>
-            <h4>Make the cheese layer:</h4>
-            Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and
-            pepper in a bowl.
-        </li>
-        <li>
-            <h4>Assemble the lasagna:</h4>
-            Layer the ingredients according to the recipe (starting with sauce and ending with
-            mozzarella) until the lasagna is assembled.
-        </li>
-        <li>
-            <h4>Bake the lasagna:</h4>
-            Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and
-            continue baking until the top is golden brown.
-        </li>
-    </ol>
+
+    <div class="container">
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                <h4>Cook the meat:</h4>
+                Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue
+                cooking until it's translucent. Stir in the canned tomato products, half of the parsley, 
+                garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.
+            </li>
+            <li>
+                <h4>Cook the noodles:</h4>
+                Boil the lasagna noodles in lightly salted water until they're al dente.
+            </li>
+            <li>
+                <h4>Make the cheese layer:</h4>
+                Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and
+                pepper in a bowl.
+            </li>
+            <li>
+                <h4>Assemble the lasagna:</h4>
+                Layer the ingredients according to the recipe (starting with sauce and ending with
+                mozzarella) until the lasagna is assembled.
+            </li>
+            <li>
+                <h4>Bake the lasagna:</h4>
+                Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and
+                continue baking until the top is golden brown.
+            </li>
+        </ol>
+    </div>
+
     <div class="space"></div>
 </body>
 </html>
